--- a/57180-h/57180-h.htm
+++ b/57180-h/57180-h.htm
@@ -217,71 +217,71 @@ and <i>Truth</i>.</p>
 
 <tr><td><span class="smcap">In an Old Garret</span></td><td align="right"><a href="#Page_1">1</a></td></tr>
 
-<tr><td>&nbsp;</td></tr>
+<tr><td colspan="2">&nbsp;</td></tr>
 
 <tr><td colspan="2" align="center">CHAPTER II.</td></tr>
 
 <tr><td><span class="smcap">The &#8220;Ledger&#8221; Period of Letters</span></td><td align="right"><a href="#Page_11">11</a></td></tr>
 
-<tr><td>&nbsp;</td></tr>
+<tr><td colspan="2">&nbsp;</td></tr>
 
 <tr><td colspan="2" align="center">CHAPTER III.</td></tr>
 
 <tr><td><span class="smcap">Something about &#8220;Good Bad Stuff&#8221;</span></td><td align="right"><a href="#Page_24">24</a></td></tr>
 
-<tr><td>&nbsp;</td></tr>
+<tr><td colspan="2">&nbsp;</td></tr>
 
 <tr><td colspan="2" align="center">CHAPTER IV.</td></tr>
 
 <tr><td><span class="smcap">The Early Holland Period</span></td><td align="right"><a href="#Page_34">34</a></td></tr>
 
-<tr><td>&nbsp;</td></tr>
+<tr><td colspan="2">&nbsp;</td></tr>
 
 <tr><td colspan="2" align="center">CHAPTER V.</td></tr>
 
 <tr><td><span class="smcap">Mendacity during the Holland Period of Letters</span></td><td align="right"><a href="#Page_47">47</a></td></tr>
 
-<tr><td>&nbsp;</td></tr>
+<tr><td colspan="2">&nbsp;</td></tr>
 
 <tr><td colspan="2" align="center">CHAPTER VI.</td></tr>
 
 <tr><td><span class="smcap">The Dawn of the Johnsonian Period</span></td><td align="right"><a href="#Page_62">62</a></td></tr>
 
-<tr><td>&nbsp;</td></tr>
+<tr><td colspan="2">&nbsp;</td></tr>
 
 <tr><td colspan="2" align="center">CHAPTER VII.<span class="pagenum"><a name="Page_vi" id="Page_vi">[Pg vi]</a></span></td></tr>
 
 <tr><td><span class="smcap">Woman&#8217;s Influence in the Johnsonian Period</span></td><td align="right"><a href="#Page_78">78</a></td></tr>
 
-<tr><td>&nbsp;</td></tr>
+<tr><td colspan="2">&nbsp;</td></tr>
 
 <tr><td colspan="2" align="center">CHAPTER VIII.</td></tr>
 
 <tr><td><span class="smcap">Literature&mdash;Pawed and Unpawed; and the Crown-Prince Thereof</span></td><td align="right"><a href="#Page_99">99</a></td></tr>
 
-<tr><td>&nbsp;</td></tr>
+<tr><td colspan="2">&nbsp;</td></tr>
 
 <tr><td colspan="2" align="center">CHAPTER IX.</td></tr>
 
 <tr><td><span class="smcap">Certain Things which a Conscientious Literary Worker may Find in the City of New York</span></td><td align="right"><a href="#Page_118">118</a></td></tr>
 
-<tr><td>&nbsp;</td></tr>
+<tr><td colspan="2">&nbsp;</td></tr>
 
 <tr><td colspan="2" align="center">CHAPTER X.</td></tr>
 
 <tr><td>&#8220;<span class="smcap">He Trun up Bote Hands!</span>&#8221;</td><td align="right"><a href="#Page_139">139</a></td></tr>
 
-<tr><td>&nbsp;</td></tr>
+<tr><td colspan="2">&nbsp;</td></tr>
 
 <tr><td colspan="2" align="center">CHAPTER XI.</td></tr>
 
 <tr><td><span class="smcap">The Conclusion of the Whole Matter.</span></td><td align="right"><a href="#Page_160">160</a></td></tr>
 
-<tr><td>&nbsp;</td></tr>
+<tr><td colspan="2">&nbsp;</td></tr>
 
 <tr><td colspan="2" align="center">AND OTHER TALES.</td></tr>
 
-<tr><td>&nbsp;</td></tr>
+<tr><td colspan="2">&nbsp;</td></tr>
 
 <tr><td><span class="smcap">The Poets&#8217; Strike</span></td><td align="right"><a href="#Page_183">183</a></td></tr>
 
